# Cxx11Sharp.NativeAssets

./: .gitattributes  CMakeLists.txt  DicomStudio.Cxx11Sharp.NativeAssets.csproj  LICENSE  README.md
.github/workflows/: main.yml
src/: managed_streambuf.cxx
